--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -8,11 +8,11 @@ ds3JavaCliVersion = "5.1.4"
 #
 commonsCliVersion = "1.5.0"
 commonsCsvVersion = "1.9.0"
-ds3SdkVersion = "5.1.3"
-guavaVersion="31.1-jre"
+ds3SdkVersion = "5.6.0"
+guavaVersion="32.1.2-jre"
 guiceVersion="5.1.0"
 hamcrestVersion = "2.2"
-jacksonVersion = "2.11.4"
+jacksonVersion = "2.15.2"
 jodaTimeVersion = "2.9.9"
 junitVersion = "4.13.2"
 kotlincoroutineVersion = "1.6.4"
@@ -24,7 +24,8 @@ powermockVersion = "2.0.9"
 [libraries]
 commonsCli = { module = "commons-cli:commons-cli", version.ref = "commonsCliVersion" }
 commonsCsv = { module = "org.apache.commons:commons-csv", version.ref = "commonsCsvVersion" }
-ds3Sdk = { module = "com.github.spectralogic.ds3_java_sdk:ds3-sdk", version.ref = "ds3SdkVersion" }
+ds3Bom = { module = "com.spectralogic.ds3:ds3-bom", version.ref = "ds3SdkVersion"}
+ds3Sdk = { module = "com.spectralogic.ds3:ds3-sdk" }
 guava = { module = "com.google.guava:guava", version.ref = "guavaVersion" }
 guiceCore = { module = "com.google.inject:guice" , version.ref = "guiceVersion" }
 hamcrestLib = { module = "org.hamcrest:hamcrest-library", version.ref = "hamcrestVersion" }
